feat: Finish the project. Add CI workflows for build, test, deploy, release, and semantic versioning
- Implemented GitHub Actions workflows:
  - `build.yml`: automates build, test, and artifact uploads for `main` and `develop`.
  - `deploy-javadoc.yml`: publishes versioned Javadocs to GitHub Pages on tag pushes.
  - `publish-release.yml`: releases versioned builds to GitHub Packages.
  - `publish-snapshot.yml`: publishes successful `develop` builds as snapshots.
  - `semantic-release.yml`: automates semantic versioning and changelog updates linked to `main`.

- Added concurrency groups to serialize critical tasks and prevent parallel race conditions.
- Configured JDK 25 and Gradle caching to optimize build performance.
- Added benchmark documentation for the chaos agent JMH benchmarks.